refactor backend for convenient communication with frontend